Update descriptions and roles for various guardians

--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@ const guardianes = [
   {
     nombre: "AntiRra",
     universo: "SANKOFA 3000",
-    desc: "Transformo la herida en saber, el trauma en fuego y la verdad en libertad.",
+    desc: "El que revela cómo los “falsos padres del racismo”usaron la filosofía y la ciencia para esclavizar.Su arte no es solo creación,es reparación.Su voz no es solo denuncia,es resurrección..",
     rol: "Modelo y activista antirracista",
     elemento: "Conocimiento",
     imagen: "imgnkafa/jair.png",
@@ -1657,7 +1657,7 @@ const guardianes = [
   {
     nombre: "Aris",
     universo: "SANKOFA 3000",
-    desc: "Facilita procesos de comunidad donde las narrativas afro se transforman en programas educativos.",
+    desc: "Aris teje narrativas nuevas sobre la comunidad afro,no desde el dolor, sino desde el orgullo, la alegría y la herencia.Ella guía a otros hacia el reconocimiento propio,recordándoles que saber quiénes fuerones el primer paso para decidir quiénes serán.",
     rol: "Gestora de contenidos y educación",
     elemento: "Palabra",
     imagen: "imgnkafa/aris.png",
@@ -1666,7 +1666,7 @@ const guardianes = [
   {
     nombre: "Orí N'Zinga",
     universo: "UBUNTU NETWORK",
-    desc: "Lidera iniciativas de fortalecimiento de liderazgo femenino afro.",
+    desc: "Emana resistencia africana:donde otros ven muros, ella ve tronos.Lucha por lasmujeres afro que fueron silenciadasinvisibilizadas en los sistemas del poder.Orí transforma la herida en lanza,la exclusión en liderazgo,y la rabia en creación colectiva.",
     rol: "Líder comunitaria y formadora",
     elemento: "Territorio",
     imagen: "imgnkafa/ori.jpg",
@@ -1675,7 +1675,7 @@ const guardianes = [
   {
     nombre: "Kumbuka",
     universo: "UBUNTU NETWORK",
-    desc: "Trabaja en la preservación y curaduría digital de archivos orales y genealogías.",
+    desc: "Kum usa la tecnología como espejo de la historia:convierte la inteligencia artificial en inteligencia ancestral.A través de sus redes, las mujeres afro vuelven a ocupar su lugar:en el arte, la ciencia, la política y la narración del mundo.",
     rol: "Archivista digital",
     elemento: "Memoria",
     imagen: "imgnkafa/hila.png",
@@ -1693,8 +1693,8 @@ const guardianes = [
   {
     nombre: "Peter",
     universo: "NIA QUANTUM",
-    desc: "Articula proyectos de economía cultural a partir del sonido: festivales y colectivos.",
-    rol: "Gestor cultural",
+    desc: "su música une pasado y futuro.Cada tambor es una base de datos espiritual,cada canto, una descarga de energía colectiva.",
+    rol: "Músico y gestor cultural",
     elemento: "Pulso comunitario",
     imagen: "imgnkafa/peter.png",
     url: "https://www.instagram.com/losreyesdelachirimia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
@@ -1703,10 +1703,10 @@ const guardianes = [
     nombre: "Marvin",
     universo: "NIA QUANTUM",
     desc: "Diseña residencias creativas y laboratorios donde jóvenes afro exploran tecnologías sonoras.",
-    rol: "Curador y facilitador creativo",
+    rol: "Músico y facilitador creativo",
     elemento: "Creatividad",
     imagen: "imgnkafa/marg.png",
-    url: "https://www.instagram.com/marvintumtum__?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+    url: "https://www.youtube.com/@peterbeatylosreyesdelachirimia"
   },
   {
     nombre: "Dulce",
@@ -1720,17 +1720,17 @@ const guardianes = [
   {
     nombre: "Prais",
     universo: "ORI",
-    desc: "Coordina talleres de moda comunitaria que conectan saberes textiles ancestrales.",
+    desc: "Coordina la moda como manera de expresion .",
     rol: "Formadora en textiles y moda",
-    elemento: "Tejido",
+    elemento: "Moda",
     imagen: "imgnkafa/prais.png",
     url: "https://www.instagram.com/__prais?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
   },
   {
     nombre: "Z$ller",
     universo: "ORI",
-    desc: "Documenta y difunde prácticas estéticas afro a través de fotografía y medios digitales.",
-    rol: "Fotógrafo y comunicador visual",
+    desc: "Rompe paradigmas sobre la belleza negra a través de la moda y el modelaje.",
+    rol: "Modelo y bailarín",
     elemento: "Imagen",
     imagen: "imgnkafa/miller.png",
     url: "https://www.instagram.com/millxrz?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
@@ -1747,9 +1747,9 @@ const guardianes = [
   {
     nombre: "Flako",
     universo: "AYÉ",
-    desc: "Explora la relación entre sonido y praxis del cuidado: crea piezas sonoras y documentales.",
-    rol: "Documentalista sonoro",
-    elemento: "Frecuencia",
+    desc: "Enseña cómo las locks es un acto de amor propio y resistencia cultural.",
+    rol: "Guia de cabello afro",
+    elemento: "Locks",
     imagen: "imgnkafa/flako.png",
     url: "https://www.instagram.com/theprettyflako?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
   },
